@@ -6,7 +6,7 @@ pipeline {
         AWS_REGION = 'ap-south-1'
         ECR_REPO = '777014042292.dkr.ecr.ap-south-1.amazonaws.com/java/spc'
         ARTIFACTORY_URL = 'https://trialtud4wx.jfrog.io/artifactory/javaspc-libs-release-local/com/myapp'
-        MAVEN_OPTS = '--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED '
+        
     }
 
     triggers {
@@ -18,7 +18,7 @@ pipeline {
         stage('GIT CHECKOUT') {
             steps {
                 checkout([$class: 'GitSCM', branches: [[name: '*/main']], 
-                    userRemoteConfigs: [[url: 'https://github.com/Raj-Gandhi-1992/java-spc-pipeline.git']]])
+                    userRemoteConfigs: [[url: 'https://github.com/Raj-Gandhi-1992/java-spc-pipeline.git']]]) // change the files in repo
             }
         }
 
@@ -27,12 +27,7 @@ pipeline {
                 withCredentials([string(credentialsId: 'sonar_new', variable: 'SONAR_TOKEN')]) {
                     withSonarQubeEnv('SONARQUBE') {
                         sh '''
-                            mvn clean package \
-                                -Derrorprone.skip=true \
-                                -Denforcer.skip=true \
-                                -Dcheckstyle.skip=true \
-                                -DskipTests \
-                                sonar:sonar \
+                            mvn clean package sonar:sonar \
                                 -Dsonar.projectKey=Raj-Gandhi-1992_java-spc-pipeline \
                                 -Dsonar.organization=raj-gandhi-1992 \
                                 -Dsonar.host.url=https://sonarcloud.io \
@@ -43,63 +38,63 @@ pipeline {
             }
         }
 
-        stage('Upload to JFrog Artifactory') {
-            steps {
-                script {
-                    def server = Artifactory.server(SERVER_ID)
-                    def buildInfo = Artifactory.newBuildInfo()
+        // stage('Upload to JFrog Artifactory') {
+        //     steps {
+        //         script {
+        //             def server = Artifactory.server(SERVER_ID)
+        //             def buildInfo = Artifactory.newBuildInfo()
 
-                    server.upload(
-                        spec: """{
-                            "files": [
-                                {
-                                    "pattern": "target/*.jar",
-                                    "target": "javaspc-libs-release-local/com/myapp/${BUILD_NUMBER}/"
-                                }
-                            ]
-                        }""",
-                        buildInfo: buildInfo
-                    )
-                    server.publishBuildInfo(buildInfo)
-                }
-            }
-        }
+        //             server.upload(
+        //                 spec: """{
+        //                     "files": [
+        //                         {
+        //                             "pattern": "target/*.jar",
+        //                             "target": "javaspc-libs-release-local/com/myapp/${BUILD_NUMBER}/"
+        //                         }
+        //                     ]
+        //                 }""",
+        //                 buildInfo: buildInfo
+        //             )
+        //             server.publishBuildInfo(buildInfo)
+        //         }
+        //     }
+        // }
 
-        stage('Build & Push Docker Image to ECR') {
-            steps {
-                script {
-                    def imageTag = "${ECR_REPO}:${BUILD_NUMBER}"
+        // stage('Build & Push Docker Image to ECR') {
+        //     steps {
+        //         script {
+        //             def imageTag = "${ECR_REPO}:${BUILD_NUMBER}"
 
-                    // AWS ECR login
-                    sh "aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO"
+        //             // AWS ECR login
+        //             sh "aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO"
 
-                    // Build and push Docker image
-                    sh "docker build -f Dockerfile -t ${imageTag} ."
-                    sh "docker push ${imageTag}"
-                }
-            }
-        }
+        //             // Build and push Docker image
+        //             sh "docker build -f Dockerfile -t ${imageTag} ."
+        //             sh "docker push ${imageTag}"
+        //         }
+        //     }
+        // }
 
-        stage('Install Trivy & Scan Image') {
-            steps {
-                script {
-                    sh '''
-                        if ! command -v trivy &> /dev/null; then
-                            curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh
-                            sudo mv trivy /usr/local/bin/
-                        fi
-                        trivy --version
-                        trivy image --format template --template "@contrib/junit.tpl" -o trivy-report.xml ${ECR_REPO}:${BUILD_NUMBER}
-                    '''
-                }
-            }
-            post {
-                always {
-                    junit allowEmptyResults: true, testResults: 'trivy-report.xml'
-                    archiveArtifacts artifacts: 'trivy-report.xml'
-                }
-            }
-        }
+        // stage('Install Trivy & Scan Image') {
+        //     steps {
+        //         script {
+        //             sh '''
+        //                 if ! command -v trivy &> /dev/null; then
+        //                     curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh
+        //                     sudo mv trivy /usr/local/bin/
+        //                 fi
+        //                 trivy --version
+        //                 trivy image --format template --template "@contrib/junit.tpl" -o trivy-report.xml ${ECR_REPO}:${BUILD_NUMBER}
+        //             '''
+        //         }
+        //     }        
+        //     post {
+        //         always {
+        //             junit allowEmptyResults: true, testResults: 'trivy-report.xml'
+        //             archiveArtifacts artifacts: 'trivy-report.xml'
+        //         }
+        //     }
+        // }
     }
 
     post {
